=== 3.12 / ??

* Minor enhancements
  * Added DEVELOPERS document which contains an overview of how RDoc works and
    how to add new features to RDoc.
  * Improved title for HTML output to include <code>--title</code> in the
    title element.

* Bug fixes
  * Fix title on HTML output for pages.

=== 3.11 / 2011/10-17

* Bug fixes
  * Avoid parsing TAGS files included in gems.  Issue #81 by Santiago
    Pastorino.

=== 3.10 / 2011-10-08

* Major enhancements
  * RDoc HTML output has been improved:
    * The search from Володя Колесников's (Vladimir Kolesnikov) Sdoc has been
      integrated.

      The search index generation is a reusable component through
      RDoc::Generator::JsonIndex
    * The table of contents is now a separate page and now shows links to
      headings and sections inside a page or class.
    * Class pages no longer show the namespace and no longer have file info
      pages.
    * HTML output is HTML 5.
    * Static files can be copied into RDoc using --copy-files
  * RDoc supports additional documentation formats:
    * TomDoc 1.0.0-rc1
    * RD format

    The default markup can be set via the <tt>--markup</tt> option.

    The format of documentation in a particular file can be specified by the
    +:markup:+ directive.  If the +:markup:+ directive is in the first comment
    it is used as the default for the entire file.  For other comments it
    overrides the default markup format.

    The markup format can be set for rake tasks using RDoc::Task#markup
  * RDoc can save and load an options file.

    To create an options file that defaults to using TomDoc markup run:

      rdoc --markup tomdoc --write-options

    This will create a .rdoc_options file.  Check it in to your VCS and
    package it with your gem.  RDoc will automatically load this file and
    combine it with the user's options.

    Some options are not saved.  See RDoc::Options@Saved+Options for full
    details.

* Minor enhancements