@@ -17,6 +17,7 @@ Forward Looking Statements applies.
 * Global variable support
 * Page support for ri
 * Provide the code_object to directive handlers
+* Add markup parser documentation to DEVELOPERS.rdoc
 
 === 4
 
