@@ -30,7 +30,32 @@ class TestRDocRubyLex < RDoc::TestCase
     assert_equal expected, tokens
   end
 
-  def test_class_tokenize_heredoc
+  def test_class_tokenize_def_heredoc
+    tokens = RDoc::RubyLex.tokenize <<-'RUBY', nil
+def x
+  <<E
+Line 1
+Line 2
+E
+end
+    RUBY
+
+    expected = [
+      @TK::TkDEF       .new( 0, 1,  0, 'def'),
+      @TK::TkSPACE     .new( 3, 1,  3, ' '),
+      @TK::TkIDENTIFIER.new( 4, 1,  4, 'x'),
+      @TK::TkNL        .new( 5, 1,  5, "\n"),
+      @TK::TkSPACE     .new( 6, 2,  0, '  '),
+      @TK::TkSTRING    .new( 8, 2,  2, %Q{"Line 1\nLine 2\n"}),
+      @TK::TkNL        .new(27, 5, 28, "\n"),
+      @TK::TkEND       .new(28, 6,  0, 'end'),
+      @TK::TkNL        .new(31, 6, 28, "\n"),
+    ]
+
+    assert_equal expected, tokens
+  end
+
+  def test_class_tokenize_heredoc_indent
     tokens = RDoc::RubyLex.tokenize <<-'RUBY', nil
 string = <<-STRING
 Line 1
