@@ -8,6 +8,7 @@
 
 * Bug fixes
   * Fix title on HTML output for pages.
+  * Fixed parsing of non-indented HEREDOC.
 
 === 3.11 / 2011/10-17
 
